--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
-        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
         <td>Мали принц</td>
         <td class="image"><a href="naslovna/srpski-cirilica-1.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica-1.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica-1.jpg" target="_blank"><img src="prva_th/srpski-cirilica-1.jpg" width="50px"></a></td>
@@ -111,7 +111,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
-        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
         <td>Мали принц</td>
         <td class="image"><a href="naslovna/srpski-cirilica-2.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica-2.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica-2.jpg" target="_blank"><img src="prva_th/srpski-cirilica-2.jpg" width="50px"></a></td>
@@ -119,7 +119,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
-        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
         <td>Мали принц</td>
         <td class="image"><a href="naslovna/srpski-cirilica-3.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica-3.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica-3.jpg" target="_blank"><img src="prva_th/srpski-cirilica-3.jpg" width="50px"></a></td>
@@ -127,7 +127,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
-        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
         <td>Мали принц</td>
         <td class="image"><a href="naslovna/srpski-cirilica_prosveta.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_prosveta.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica_prosveta.jpg" target="_blank"><img src="prva_th/srpski-cirilica_prosveta.jpg" width="50px"></a></td>
@@ -135,7 +135,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
-        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
         <td>Мали принц</td>
         <td class="image"><a href="naslovna/srpski-cirilica_makarije.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_makarije.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica_makarije.jpg" target="_blank"><img src="prva_th/srpski-cirilica_makarije.jpg" width="50px"></a></td>
@@ -143,7 +143,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
-        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
         <td>Мали принц</td>
         <td class="image"><a href="naslovna/srpski-cirilica_laguna.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_laguna.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica_laguna.jpg" target="_blank"><img src="prva_th/srpski-cirilica_laguna.jpg" width="50px"></a></td>
@@ -151,7 +151,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
-        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
         <td>Мали принц</td>
         <td class="image"><a href="naslovna/srpski-cirilica_maxum.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_maxum.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica_maxum.jpg" target="_blank"><img src="prva_th/srpski-cirilica_maxum.jpg" width="50px"></a></td>
@@ -159,7 +159,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
-        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
         <td>Мали принц</td>
         <td class="image"><a href="naslovna/srpski-cirilica_akia.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_akia.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica_akia.jpg" target="_blank"><img src="prva_th/srpski-cirilica_akia.jpg" width="50px"></a></td>
@@ -167,7 +167,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
-        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
         <td>Мали принц</td>
         <td class="image"><a href="naslovna/srpski-cirilica_poligraf.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_poligraf.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica_poligraf.jpg" target="_blank"><img src="prva_th/srpski-cirilica_poligraf.jpg" width="50px"></a></td>
@@ -175,7 +175,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
-        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian cyrilic</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
         <td>Мали принц</td>
         <td class="image"><a href="naslovna/srpski-cirilica_milinko.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_milinko.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica_milinko.jpg" target="_blank"><img src="prva_th/srpski-cirilica_milinko.jpg" width="50px"></a></td>
