--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <tr>
        <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica 3D</td>
-        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic Pop-Up book</a></td>
         <td>Мали принц</td>
         <td class="image"><a href="naslovna/srpski-cirilica_3d.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_3d.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica_3d.jpg" target="_blank"><img src="prva_th/srpski-cirilica_3d.jpg" width="50px"></a></td>
