--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Srpski latinica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin Graphic novel</a></td>
+        <td>Mali princ strip</td>
+        <td class="image"><a href="naslovna/srpski-latinica_strip.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_strip.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-latinica_strip.jpg" target="_blank"><img src="prva_th/srpski-latinica_strip.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
         <td>Мали принц</td>
