--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -173,6 +173,14 @@
         <td class="image"><a href="prva/srpski-cirilica_riznica.jpg" target="_blank"><img src="prva_th/srpski-cirilica_riznica.jpg" width="50px"></a></td>
       </tr>
       <tr>
+       <td class="number"><span class="auto"></span></td>
+       <td>Srpski ćirilica 3D</td>
+       <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic Pop-Up book</a></td>
+       <td>Мали принц</td>
+       <td class="image"><a href="naslovna/srpski-cirilica_3d.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_3d.jpg" width="50px"></a></td>
+       <td class="image"><a href="prva/srpski-cirilica_3d.jpg" target="_blank"><img src="prva_th/srpski-cirilica_3d.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski latinica</td>
         <td><a href="https://en.wikipedia.org/wiki/Augmented_reality" target="_blank">Augmented reality</a></td>
