--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@
         <td class="image"><a href="naslovna/srpski-cirilica_prosveta66.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_prosveta66.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica_prosveta66.jpg" target="_blank"><img src="prva_th/srpski-cirilica_prosveta66.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski ćirilica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
+        <td>Мали принц</td>
+        <td class="image"><a href="naslovna/srpski-cirilica_zavod.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_zavod.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-cirilica_zavod.jpg" target="_blank"><img src="prva_th/srpski-cirilica_zavod.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
