--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
         <td class="image"><a href="naslovna/srpski-latinica.jpg" target="_blank"><img src="naslovna_th/srpski-latinica.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-latinica.jpg" target="_blank"><img src="prva_th/srpski-latinica.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski latinica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="naslovna/srpski-latinica_vulkan2.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_vulkan2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-latinica_vulkan2.jpg" target="_blank"><img src="prva_th/srpski-latinica_vulkan2.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski latinica</td>
