--- a/index.html
+++ b/index.html
@@ -948,6 +948,14 @@
         <td class="image"><a href="naslovna/spanskimini.jpg" target="_blank"><img src="naslovna_th/spanskimini.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/spanskimini.jpg" target="_blank"><img src="prva_th/spanskimini.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Špansko Argentinski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Rioplatense_Spanish" target="_blank">Rioplatense Spanish</a></td>
+        <td>El nene principita</td>
+        <td class="image"><a href="naslovna/spansko-argentinski.jpg" target="_blank"><img src="naslovna_th/spansko-argentinski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spansko-argentinski.jpg" target="_blank"><img src="prva_th/spansko-argentinski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Švedski jezik</td>
