--- a/index.html
+++ b/index.html
@@ -1084,6 +1084,14 @@
         <td class="image"><a href="naslovna/verona.jpg" target="_blank"><img src="naslovna_th/verona.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/verona.jpg" target="_blank"><img src="prva_th/verona.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Vijetnamski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Vietnamese_language" target="_blank">Vietnamese language</a></td>
+        <td>Chú bé Hoàng Tử</td>
+        <td class="image"><a href="naslovna/vijetnamski2.jpg" target="_blank"><img src="naslovna_th/vijetnamski2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/vijetnamski2.jpg" target="_blank"><img src="prva_th/vijetnamski2.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Vijetnamski jezik</td>
