--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@
         <td class="image"><a href="naslovna/srpski-latinica_strip.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_strip.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-latinica_strip.jpg" target="_blank"><img src="prva_th/srpski-latinica_strip.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski latinica - adaptacija za pozorište</td>
+        <td><a href="##LINK KA WIKIPEDIJI##" target="_blank">Thr Little prince - Adaptation for the Theater</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="naslovna/srpskipozoriste.jpg" target="_blank"><img src="naslovna_th/srpskipozoriste.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpskipozoriste.jpg" target="_blank"><img src="prva_th/srpskipozoriste.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
