--- a/index.html
+++ b/index.html
@@ -308,6 +308,14 @@
         <td class="image"><a href="naslovna/bosanski.jpg" target="_blank"><img src="naslovna_th/bosanski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/bosanski.jpg" target="_blank"><img src="prva_th/bosanski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Bosanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Bosnian_language" target="_blank">Bosnian language</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="naslovna/bosanski2.jpg" target="_blank"><img src="naslovna_th/bosanski2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/bosanski2.jpg" target="_blank"><img src="prva_th/bosanski2.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Brazilski portugalski jezik</td>
