--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -68,6 +68,14 @@
         <td class="image"><a href="naslovna/srpski-latinica_strip.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_strip.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-latinica_strip.jpg" target="_blank"><img src="prva_th/srpski-latinica_strip.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski latinica - adaptacija za pozorište</td>
+        <td><a href="https://en.wikipedia.org/wiki/List_of_The_Little_Prince_adaptations#Live_theatre_dramas" target="_blank">Thr Little prince - Adaptation for the Theater</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="naslovna/srpskipozoriste.jpg" target="_blank"><img src="naslovna_th/srpskipozoriste.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpskipozoriste.jpg" target="_blank"><img src="prva_th/srpskipozoriste.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski ćirilica</td>
@@ -251,6 +259,14 @@
         <td>Mali princ</td>
         <td class="image"><a href="naslovna/bosanski.jpg" target="_blank"><img src="naslovna_th/bosanski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/bosanski.jpg" target="_blank"><img src="prva_th/bosanski.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Bosanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Bosnian_language" target="_blank">Bosnian language</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="naslovna/bosanski2.jpg" target="_blank"><img src="naslovna_th/bosanski2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/bosanski2.jpg" target="_blank"><img src="prva_th/bosanski2.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
