--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -918,6 +918,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Špansko Argentinski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Rioplatense_Spanish" target="_blank">Rioplatense Spanish</a></td>
+        <td>El nene principita</td>
+        <td class="image"><a href="naslovna/spansko-argentinski.jpg" target="_blank"><img src="naslovna_th/spansko-argentinski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spansko-argentinski.jpg" target="_blank"><img src="prva_th/spansko-argentinski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Švedski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Swedish_language" target="_blank">Swedish language</a></td>
         <td>Lille prinsen</td>
@@ -1043,6 +1051,14 @@
         <td>El Principe Butin</td>
         <td class="image"><a href="naslovna/verona.jpg" target="_blank"><img src="naslovna_th/verona.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/verona.jpg" target="_blank"><img src="prva_th/verona.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Vijetnamski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Vietnamese_language" target="_blank">Vietnamese language</a></td>
+        <td>Chú bé Hoàng Tử</td>
+        <td class="image"><a href="naslovna/vijetnamski2.jpg" target="_blank"><img src="naslovna_th/vijetnamski2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/vijetnamski2.jpg" target="_blank"><img src="prva_th/vijetnamski2.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
