--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -49,6 +49,14 @@
         <td>Srpski latinica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
         <td>Mali princ</td>
+        <td class="image"><a href="naslovna/srpski-latinica_vulkan2.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_vulkan2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-latinica_vulkan2.jpg" target="_blank"><img src="prva_th/srpski-latinica_vulkan2.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski latinica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
+        <td>Mali princ</td>
         <td class="image"><a href="naslovna/srpski-latinica_novus.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_novus.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-latinica_novus.jpg" target="_blank"><img src="prva_th/srpski-latinica_novus.jpg" width="50px"></a></td>
       </tr>
@@ -68,7 +76,7 @@
         <td class="image"><a href="naslovna/srpski-latinica_strip.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_strip.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-latinica_strip.jpg" target="_blank"><img src="prva_th/srpski-latinica_strip.jpg" width="50px"></a></td>
       </tr>
-       <tr>
+      <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski latinica - adaptacija za pozorište</td>
         <td><a href="https://en.wikipedia.org/wiki/List_of_The_Little_Prince_adaptations#Live_theatre_dramas" target="_blank">Thr Little prince - Adaptation for the Theater</a></td>
