--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -409,6 +409,14 @@
         <td>Francuski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/French_language" target="_blank">French language</a></td>
         <td>Le Petit prince</td>
+        <td class="image"><a href="naslovna/francuski47.jpg" target="_blank"><img src="naslovna_th/francuski47.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/francuski47.jpg" target="_blank"><img src="prva_th/francuski47.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Francuski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/French_language" target="_blank">French language</a></td>
+        <td>Le Petit prince</td>
         <td class="image"><a href="naslovna/francuski.jpg" target="_blank"><img src="naslovna_th/francuski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/francuski.jpg" target="_blank"><img src="prva_th/francuski.jpg" width="50px"></a></td>
       </tr>
