--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -478,6 +478,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Grenlandski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Greenlandic_language" target="_blank">Greenlandic language</a></td>
+        <td>Ataqqinartuaraq</td>
+        <td class="image"><a href="naslovna/grenlandski.jpg" target="_blank"><img src="naslovna_th/grenlandski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/grenlandski.jpg" target="_blank"><img src="prva_th/grenlandski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Gruzinski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Georgian_language" target="_blank">Georgian language</a></td>
         <td>პატარა პრინცი</td>
