--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1100,6 +1100,14 @@
         <td class="image"><a href="naslovna/vijetnamski.jpg" target="_blank"><img src="naslovna_th/vijetnamski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/vijetnamski.jpg" target="_blank"><img src="prva_th/vijetnamski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Vilamovski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Wymysorys_language" target="_blank">Wymysorys/Vilamovian language</a></td>
+        <td>Der Kliny Fjyśt</td>
+        <td class="image"><a href="naslovna/vilamovski.jpg" target="_blank"><img src="naslovna_th/vilamovski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/vilamovski.jpg" target="_blank"><img src="prva_th/vilamovski.jpg" width="50px"></a></td>
+      </tr>
 
 <!--
       <tr>
