--- a/index.html
+++ b/index.html
@@ -1100,6 +1100,14 @@
         <td class="image"><a href="naslovna/turski-denizli_dijalekt.jpg" target="_blank"><img src="naslovna_th/turski-denizli_dijalekt.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/turski-denizli_dijalekt.jpg" target="_blank"><img src="prva_th/turski-denizli_dijalekt.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Udegejski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Udege_language" target="_blank">Udege language</a></td>
+        <td>Ница принцэ</td>
+        <td class="image"><a href="naslovna/udegejski.jpg" target="_blank"><img src="naslovna_th/udegejski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/udegejski.jpg" target="_blank"><img src="prva_th/udegejski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Uzbečki jezik ćirilica</td>
