--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1062,6 +1062,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Udegejski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Udege_language" target="_blank">Udege language</a></td>
+        <td>Ница принцэ</td>
+        <td class="image"><a href="naslovna/udegejski.jpg" target="_blank"><img src="naslovna_th/udegejski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/udegejski.jpg" target="_blank"><img src="prva_th/udegejski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Uzbečki jezik ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Uzbek_language" target="_blank">Uzbek language</a></td>
         <td>Кичкина Шаҳзода</td>
