--- a/index.html
+++ b/index.html
@@ -828,6 +828,14 @@
         <td class="image"><a href="naslovna/aranski.jpg" target="_blank"><img src="naslovna_th/aranski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/aranski.jpg" target="_blank"><img src="prva_th/aranski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Oročki jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Orok_language" target="_blank">Orok (Uilta) language</a></td>
+        <td>Нучӣкэ принси</td>
+        <td class="image"><a href="naslovna/orocki.jpg" target="_blank"><img src="naslovna_th/orocki.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/orocki.jpg" target="_blank"><img src="prva_th/orocki.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Osmanski turski jezik</td>
