--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -790,6 +790,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Oročki jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Orok_language" target="_blank">Orok (Uilta) language</a></td>
+        <td>Нучӣкэ принси</td>
+        <td class="image"><a href="naslovna/orocki.jpg" target="_blank"><img src="naslovna_th/orocki.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/orocki.jpg" target="_blank"><img src="prva_th/orocki.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Osmanski turski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Ottoman_Turkish_language" target="_blank">Ottoman Turkish language</a></td>
         <td class="rtl">كوچوك پره نس</td>
