--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@
         <td class="image"><a href="naslovna/srpski-latinica_lom.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_lom.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-latinica_lom.jpg" target="_blank"><img src="prva_th/srpski-latinica_lom.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski latinica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="naslovna/srpski-latinica_pirot.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_pirot.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-latinica_pirot.jpg" target="_blank"><img src="prva_th/srpski-latinica_pirot.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski latinica</td>
