--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Srpski latinica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
-        <td>Mali princ/Nevesta za malog princa</td>
+        <td>Mali princ/Nevesta za Malog princa</td>
         <td class="image"><a href="naslovna/srpski-latinica_tas.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_tas.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-latinica_tas.jpg" target="_blank"><img src="prva_th/srpski-latinica_tas.jpg" width="50px"></a></td>
       </tr>
@@ -312,7 +312,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Srpski latinica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
-        <td>Mali princ/Nevesta za malog princa</td>
+        <td>Mali princ/Nevesta za Malog princa</td>
         <td class="image"><a href="naslovna/srpski-latinica_emka.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_emka.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-latinica_emka.jpg" target="_blank"><img src="prva_th/srpski-latinica_emka.jpg" width="50px"></a></td>
       </tr>
