--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -262,6 +262,22 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Srpski latinica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
+        <td>Mali princ/Nevesta za Malog princa</td>
+        <td class="image"><a href="naslovna/srpski-latinica_tas.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_tas.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-latinica_tas.jpg" target="_blank"><img src="prva_th/srpski-latinica_tas.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski latinica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
+        <td>Mali princ/Nevesta za Malog princa</td>
+        <td class="image"><a href="naslovna/srpski-latinica_emka.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_emka.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-latinica_emka.jpg" target="_blank"><img src="prva_th/srpski-latinica_emka.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Albanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Albanian_language" target="_blank">Albanian language</a></td>
         <td>Princi i Vogël</td>
