--- a/index.html
+++ b/index.html
@@ -358,6 +358,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Beloruski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Belarusian_language" target="_blank">Belarusian language</a></td>
+        <td>Маленькі прынц</td>
+        <td class="image"><a href="naslovna/beloruski.jpg" target="_blank"><img src="naslovna_th/beloruski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/beloruski.jpg" target="_blank"><img src="prva_th/beloruski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Bosanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bosnian_language" target="_blank">Bosnian language</a></td>
         <td>Mali princ</td>
