--- a/index.html
+++ b/index.html
@@ -1102,6 +1102,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Tarahumara jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tarahumara_language" target="_blank">Tarahumara language</a></td>
+        <td>Táa Mo'koólame</td>
+        <td class="image"><a href="naslovna/tarahumara.jpg" target="_blank"><img src="naslovna_th/tarahumara.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/tarahumara.jpg" target="_blank"><img src="prva_th/tarahumara.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Tatarski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Tatar_language" target="_blank">Tatar language</a></td>
         <td>Нәни принц</td>
