--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,15 @@
         <td class="image"><a href="naslovna/sanskrit.jpg" target="_blank"><img src="naslovna_th/sanskrit.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/sanskrit.jpg" target="_blank"><img src="prva_th/sanskrit.jpg" width="50px"></a></td>
       </tr>
-           <tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Sejšelski kreolski</td>
+        <td><a href="https://en.wikipedia.org/wiki/Seychellois_Creole" target="_blank">Seychellois Creole</a></td>
+        <td>Pti Prens</td>
+        <td class="image"><a href="naslovna/sejselski.jpg" target="_blank"><img src="naslovna_th/sejselski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/sejselski.jpg" target="_blank"><img src="prva_th/sejselski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Kolokviajalni singapurski engleski</td>
         <td><a href="https://en.wikipedia.org/wiki/Singlish" target="_blank">Singlish</a></td>
