--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -318,6 +318,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Beloruski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Belarusian_language" target="_blank">Belarusian language</a></td>
+        <td>Маленькі прынц</td>
+        <td class="image"><a href="naslovna/beloruski.jpg" target="_blank"><img src="naslovna_th/beloruski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/beloruski.jpg" target="_blank"><img src="prva_th/beloruski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Bosanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bosnian_language" target="_blank">Bosnian language</a></td>
         <td>Mali princ</td>
@@ -956,7 +964,15 @@
         <td class="image"><a href="naslovna/sanskrit.jpg" target="_blank"><img src="naslovna_th/sanskrit.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/sanskrit.jpg" target="_blank"><img src="prva_th/sanskrit.jpg" width="50px"></a></td>
       </tr>
-           <tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Sejšelski kreolski</td>
+        <td><a href="https://en.wikipedia.org/wiki/Seychellois_Creole" target="_blank">Seychellois Creole</a></td>
+        <td>Pti Prens</td>
+        <td class="image"><a href="naslovna/sejselski.jpg" target="_blank"><img src="naslovna_th/sejselski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/sejselski.jpg" target="_blank"><img src="prva_th/sejselski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Kolokviajalni singapurski engleski</td>
         <td><a href="https://en.wikipedia.org/wiki/Singlish" target="_blank">Singlish</a></td>
@@ -1051,6 +1067,14 @@
         <td>ⴴⵟⵀⵍ</td>
         <td class="image"><a href="naslovna/tuareg.jpg" target="_blank"><img src="naslovna_th/tuareg.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/tuareg.jpg" target="_blank"><img src="prva_th/tuareg.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Tarahumara jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tarahumara_language" target="_blank">Tarahumara language</a></td>
+        <td>Táa Mo'koólame</td>
+        <td class="image"><a href="naslovna/tarahumara.jpg" target="_blank"><img src="naslovna_th/tarahumara.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/tarahumara.jpg" target="_blank"><img src="prva_th/tarahumara.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
