--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
         <td>Srpski latinica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
         <td>Mali princ</td>
+        <td class="image"><a href="naslovna/srpski-latinica_monoimanjana.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_monoimanjana.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-latinica_monoimanjana.jpg" target="_blank"><img src="prva_th/srpski-latinica_monoimanjana.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski latinica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
+        <td>Mali princ</td>
         <td class="image"><a href="naslovna/srpski-latinica_edicija.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_edicija.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-latinica_edicija.jpg" target="_blank"><img src="prva_th/srpski-latinica_edicija.jpg" width="50px"></a></td>
       </tr>
