--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -350,6 +350,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Bosanski jezik ćirilica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Bosnian_language" target="_blank">Bosnian language</a></td>
+        <td>Мали принц</td>
+        <td class="image"><a href="naslovna/bosanski-cirilica.jpg" target="_blank"><img src="naslovna_th/bosanski-cirilica.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/bosanski-cirilica.jpg" target="_blank"><img src="prva_th/bosanski-cirilica.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Bosanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bosnian_language" target="_blank">Bosnian language</a></td>
         <td>Mali princ</td>
