--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -97,6 +97,14 @@
         <td>Srpski latinica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
         <td>Mali princ</td>
+        <td class="image"><a href="naslovna/srpski-latinica_monoimanjana.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_monoimanjana.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-latinica_monoimanjana.jpg" target="_blank"><img src="prva_th/srpski-latinica_monoimanjana.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski latinica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
+        <td>Mali princ</td>
         <td class="image"><a href="naslovna/srpski-latinica_edicija.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_edicija.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-latinica_edicija.jpg" target="_blank"><img src="prva_th/srpski-latinica_edicija.jpg" width="50px"></a></td>
       </tr>
@@ -259,6 +267,14 @@
         <td>Мали принц</td>
         <td class="image"><a href="naslovna/srpski-cirilica_draganic.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_draganic.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica_draganic.jpg" target="_blank"><img src="prva_th/srpski-cirilica_draganic.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski ćirilica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
+        <td>Мали принц</td>
+        <td class="image"><a href="naslovna/srpski-cirilica_gramatikmini.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_gramatikmini.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-cirilica_gramatikmini.jpg" target="_blank"><img src="prva_th/srpski-cirilica_gramatikmini.jpg" width="50px"></a></td>
       </tr>
       <tr>
        <td class="number"><span class="auto"></span></td>
