--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,7 @@
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Tursko Kiparaski jezik</td>
+        <td>Tursko kiparski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Turkish_Cypriots" target="_blank">Turkish Cypriots</a></td>
         <td>Güçük Prens</td>
         <td class="image"><a href="naslovna/turski-kiparski.jpg" target="_blank"><img src="naslovna_th/turski-kiparski.jpg" width="50px"></a></td>
