--- a/index.html
+++ b/index.html
@@ -836,6 +836,14 @@
         <td class="image"><a href="naslovna/korejski.jpg" target="_blank"><img src="naslovna_th/korejski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/korejski.jpg" target="_blank"><img src="prva_th/korejski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Kumički jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Kumyk_language" target="_blank">Kumyk language</a></td>
+        <td>Гиччинев Пача</td>
+        <td class="image"><a href="naslovna/kumicki.jpg" target="_blank"><img src="naslovna_th/kumicki.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/kumicki.jpg" target="_blank"><img src="prva_th/kumicki.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Kurdski jezik</td>
