--- a/index.html
+++ b/index.html
@@ -822,6 +822,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Klingonski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Klingon_language" target="_blank">Klingon language</a></td>
+        <td>ta’ puq mach</td>
+        <td class="image"><a href="naslovna/klingonski.jpg" target="_blank"><img src="naslovna_th/klingonski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/klingonski.jpg" target="_blank"><img src="prva_th/klingonski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kmerski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Khmer_language" target="_blank">Khmer language</a></td>
         <td>ព្រះអង្គម្ឆាស់តូច</td>
