--- a/index.html
+++ b/index.html
@@ -742,6 +742,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Bolonjski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Languages_of_Italy" target="_blank">Italian, Bolognese dialect</a></td>
+        <td>Al Pränzip Fangén</td>
+        <td class="image"><a href="naslovna/italijanski-bolonjski_dijalekt.jpg" target="_blank"><img src="naslovna_th/italijanski-bolonjski_dijalekt.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski-bolonjski_dijalekt.jpg" target="_blank"><img src="prva_th/italijanski-bolonjski_dijalekt.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Milanski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Milanese_dialect" target="_blank">Italian, Milanese dialect</a></td>
         <td>El princip Piscinin</td>
