--- a/index.html
+++ b/index.html
@@ -1140,6 +1140,14 @@
         <td class="image"><a href="naslovna/staroegipatski.jpg" target="_blank"><img src="naslovna_th/staroegipatski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/staroegipatski.jpg" target="_blank"><img src="prva_th/staroegipatski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Sundski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Sundanese_language" target="_blank">Sundanese language</a></td>
+        <td>Prabu Anom</td>
+        <td class="image"><a href="naslovna/sundski.jpg" target="_blank"><img src="naslovna_th/sundski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/sundski.jpg" target="_blank"><img src="prva_th/sundski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Svahili jezik</td>
