--- a/index.html
+++ b/index.html
@@ -836,6 +836,14 @@
         <td class="image"><a href="naslovna/kirgiski.jpg" target="_blank"><img src="naslovna_th/kirgiski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/kirgiski.jpg" target="_blank"><img src="prva_th/kirgiski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Kirundi jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Kirundi" target="_blank">Kirundi language</a></td>
+        <td>Sakaganwa</td>
+        <td class="image"><a href="naslovna/kirundi.jpg" target="_blank"><img src="naslovna_th/kirundi.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/kirundi.jpg" target="_blank"><img src="prva_th/kirundi.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Klingonski jezik</td>
