--- a/index.html
+++ b/index.html
@@ -934,6 +934,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Majanski Tojolabal</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tojolab%CA%BCal_language" target="_blank">Mayan Tokolab'al language</a></td>
+        <td>Yal ch'in ajwalal</td>
+        <td class="image"><a href="naslovna/majanski.jpg" target="_blank"><img src="naslovna_th/majanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/majanski.jpg" target="_blank"><img src="prva_th/majanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Makedonski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Macedonian_language" target="_blank">Macedonian language</a></td>
         <td>Малиот принц</td>
