--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Majanski Tojolabal</td>
-        <td><a href="https://en.wikipedia.org/wiki/Tojolab%CA%BCal_language" target="_blank">Mayan Tokolab'al language</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Tojolab%CA%BCal_language" target="_blank">Mayan Tojolab'al language</a></td>
         <td>Yal ch'in ajwalal</td>
         <td class="image"><a href="naslovna/majanski.jpg" target="_blank"><img src="naslovna_th/majanski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/majanski.jpg" target="_blank"><img src="prva_th/majanski.jpg" width="50px"></a></td>
