--- a/index.html
+++ b/index.html
@@ -966,6 +966,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Mapuče jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Mapuche_language" target="_blank">Mapuche language</a></td>
+        <td>Chi Pichi Ülmen</td>
+        <td class="image"><a href="naslovna/mapuce.jpg" target="_blank"><img src="naslovna_th/mapuce.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/mapuce.jpg" target="_blank"><img src="prva_th/mapuce.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Moliški dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Slavomolisano_dialect" target="_blank">Molise dialect</a></td>
         <td>Ru Prengeparielle</td>
