--- a/index.html
+++ b/index.html
@@ -1038,6 +1038,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Pandžabi jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Punjabi_language" target="_blank">Punjabi language</a></td>
+        <td>ਛੋਟਾ ਸ਼ਹਿਜ਼ਾਦਾ</td>
+        <td class="image"><a href="naslovna/pandzabi.jpg" target="_blank"><img src="naslovna_th/pandzabi.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/pandzabi.jpg" target="_blank"><img src="prva_th/pandzabi.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Persijski Farsi jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Persian_language" target="_blank">Persian language</a></td>
         <td class="rtl">شازده کوچولو</td>
