--- a/index.html
+++ b/index.html
@@ -1060,6 +1060,14 @@
         <td class="image"><a href="naslovna/poljski.jpg" target="_blank"><img src="naslovna_th/poljski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/poljski.jpg" target="_blank"><img src="prva_th/poljski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Poljski, Podhale dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Dialects_of_Polish" target="_blank">Polish, Podhale dialect</a></td>
+        <td>Mały Królewic</td>
+        <td class="image"><a href="naslovna/poljskipodhale.jpg" target="_blank"><img src="naslovna_th/poljskipodhale.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/poljskipodhale.jpg" target="_blank"><img src="prva_th/poljskipodhale.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Portugalski jezik</td>
