--- a/index.html
+++ b/index.html
@@ -1102,11 +1102,11 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Rojas-Tend dijalekt</td>
+        <td>Rojasc-Tend dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Royasc" target="_blank">Royasc Tendasque dialect</a></td>
         <td>Ař Picin Prinsi</td>
-        <td class="image"><a href="naslovna/royasc.jpg" target="_blank"><img src="naslovna_th/royasc.jpg" width="50px"></a></td>
-        <td class="image"><a href="prva/royasc.jpg" target="_blank"><img src="prva_th/royasc.jpg" width="50px"></a></td>
+        <td class="image"><a href="naslovna/royase.jpg" target="_blank"><img src="naslovna_th/royase.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/royase.jpg" target="_blank"><img src="prva_th/royase.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
