--- a/index.html
+++ b/index.html
@@ -1276,6 +1276,14 @@
         <td class="image"><a href="naslovna/tuareg.jpg" target="_blank"><img src="naslovna_th/tuareg.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/tuareg.jpg" target="_blank"><img src="prva_th/tuareg.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Tamašek (Tuareški) jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tamasheq_language" target="_blank">Tamasheq (Tuareg) languages</a></td>
+        <td>ⴴⵟⵀⵍ</td>
+        <td class="image"><a href="naslovna/tuareg2.jpg" target="_blank"><img src="naslovna_th/tuareg2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/tuareg2.jpg" target="_blank"><img src="prva_th/tuareg2.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Tarahumara jezik</td>
