--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -281,6 +281,14 @@
         <td>Srpski ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
         <td>Мали принц</td>
+        <td class="image"><a href="naslovna/srpski-cirilica_pcelica.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_pcelica.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-cirilica_pcelica.jpg" target="_blank"><img src="prva_th/srpski-cirilica_pcelica.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski ćirilica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
+        <td>Мали принц</td>
         <td class="image"><a href="naslovna/srpski-cirilica_gramatikmini.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_gramatikmini.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica_gramatikmini.jpg" target="_blank"><img src="prva_th/srpski-cirilica_gramatikmini.jpg" width="50px"></a></td>
       </tr>
