--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -486,6 +486,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Dan ili Jakubinski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Dan_language" target="_blank">Dan (Yacouba) language</a></td>
+        <td>Gblẅdᴧgbɣ-dhᴧn</td>
+        <td class="image"><a href="naslovna/dan.jpg" target="_blank"><img src="naslovna_th/dan.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/dan.jpg" target="_blank"><img src="prva_th/dan.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Danski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Danish_language" target="_blank">Danish language</a></td>
         <td>Den lille prins</td>
