--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -510,6 +510,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Džongka jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Dzongkha" target="_blank">Dzongkha language</a></td>
+        <td>(Gyalse Zhan Nu)</td>
+        <td class="image"><a href="naslovna/dzongka.jpg" target="_blank"><img src="naslovna_th/dzongka.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/dzongka.jpg" target="_blank"><img src="prva_th/dzongka.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Engleski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/English_language" target="_blank">English language</a></td>
         <td>The Little prince</td>
