--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -838,6 +838,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Kumički jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Kumyk_language" target="_blank">Kumyk language</a></td>
+        <td>Гиччинев Пача</td>
+        <td class="image"><a href="naslovna/kumicki.jpg" target="_blank"><img src="naslovna_th/kumicki.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/kumicki.jpg" target="_blank"><img src="prva_th/kumicki.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kurdski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kurdish_languages" target="_blank">Kurdish language</a></td>
         <td>Mirzaye Piçük</td>
