--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -902,6 +902,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Majanski Tojolabal</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tojolab%CA%BCal_language" target="_blank">Mayan Tojolab'al language</a></td>
+        <td>Yal ch'in ajwalal</td>
+        <td class="image"><a href="naslovna/majanski.jpg" target="_blank"><img src="naslovna_th/majanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/majanski.jpg" target="_blank"><img src="prva_th/majanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Makedonski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Macedonian_language" target="_blank">Macedonian language</a></td>
         <td>Малиот принц</td>
@@ -923,6 +931,14 @@
         <td>Iċ-Ċkejken Prinċep</td>
         <td class="image"><a href="naslovna/malteski.jpg" target="_blank"><img src="naslovna_th/malteski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/malteski.jpg" target="_blank"><img src="prva_th/malteski.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Mapuče jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Mapuche_language" target="_blank">Mapuche language</a></td>
+        <td>Chi Pichi Ülmen</td>
+        <td class="image"><a href="naslovna/mapuce.jpg" target="_blank"><img src="naslovna_th/mapuce.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/mapuce.jpg" target="_blank"><img src="prva_th/mapuce.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
