--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1004,6 +1004,14 @@
         <td class="image"><a href="naslovna/osmanski-turski.jpg" target="_blank"><img src="naslovna_th/osmanski-turski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/osmanski-turski.jpg" target="_blank"><img src="prva_th/osmanski-turski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Pandžabi jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Punjabi_language" target="_blank">Punjabi language</a></td>
+        <td>ਛੋਟਾ ਸ਼ਹਿਜ਼ਾਦਾ</td>
+        <td class="image"><a href="naslovna/pandzabi.jpg" target="_blank"><img src="naslovna_th/pandzabi.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/pandzabi.jpg" target="_blank"><img src="prva_th/pandzabi.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Persijski Farsi jezik</td>
@@ -1019,6 +1027,14 @@
         <td>Mały Książę</td>
         <td class="image"><a href="naslovna/poljski.jpg" target="_blank"><img src="naslovna_th/poljski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/poljski.jpg" target="_blank"><img src="prva_th/poljski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Poljski, Podhale dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Dialects_of_Polish" target="_blank">Polish, Podhale dialect</a></td>
+        <td>Mały Królewic</td>
+        <td class="image"><a href="naslovna/poljskipodhale.jpg" target="_blank"><img src="naslovna_th/poljskipodhale.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/poljskipodhale.jpg" target="_blank"><img src="prva_th/poljskipodhale.jpg" width="50px"></a></td>
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
