--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1070,6 +1070,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Rojasc-Tend dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Royasc" target="_blank">Royasc Tendasque dialect</a></td>
+        <td>Ař Picin Prinsi</td>
+        <td class="image"><a href="naslovna/royase.jpg" target="_blank"><img src="naslovna_th/royase.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/royase.jpg" target="_blank"><img src="prva_th/royase.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Romski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Romani_language" target="_blank">Romani language</a></td>
         <td>O cino krajoro</td>
