--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1166,6 +1166,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Sundski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Sundanese_language" target="_blank">Sundanese language</a></td>
+        <td>Prabu Anom</td>
+        <td class="image"><a href="naslovna/sundski.jpg" target="_blank"><img src="naslovna_th/sundski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/sundski.jpg" target="_blank"><img src="prva_th/sundski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Svahili jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Swahili_language" target="_blank">Swahili language</a></td>
         <td>Mwana Mdaga wa Mfalme</td>
