--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1182,6 +1182,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Škotski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Scots_language" target="_blank">Scots language</a></td>
+        <td>The Prince-Bairnie</td>
+        <td class="image"><a href="naslovna/skotski.jpg" target="_blank"><img src="naslovna_th/skotski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/skotski.jpg" target="_blank"><img src="prva_th/skotski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Španski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Spanish_language" target="_blank">Spanish language</a></td>
         <td>El Principito</td>
