--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1334,6 +1334,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Tursko kiparski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Turkish_Cypriots" target="_blank">Turkish Cypriots</a></td>
+        <td>Güçük Prens</td>
+        <td class="image"><a href="naslovna/turski-kiparski.jpg" target="_blank"><img src="naslovna_th/turski-kiparski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/turski-kiparski.jpg" target="_blank"><img src="prva_th/turski-kiparski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Udegejski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Udege_language" target="_blank">Udege language</a></td>
         <td>Ница принцэ</td>
